added fixtures to populate category model and refactor code for scraping data

--- a/top_amz_products/top_products/templates/top_products/base.html
+++ b/top_amz_products/top_products/templates/top_products/base.html
@@ -10,7 +10,9 @@
 </head>
 
 <body class="container">
-    {% block page_content %}{% endblock page_content %}
+    {% block page_content %}
+
+    {% endblock page_content %}
 </body>
 
 </html>
