renamed the view products_stats to products_trends

--- a/top_amz_products/top_products/templates/top_products/products_trends.html
+++ b/top_amz_products/top_products/templates/top_products/products_trends.html
@@ -1,7 +1,7 @@
 {% extends "top_products/base.html" %}
 
 {% block page_content %}
-
+{% comment %} 
     <ul>
         {% for product in products %}
         <li>{{product}}</li>
@@ -11,7 +11,7 @@
         {% for images in product_images %}
         <li><img src="{images}"> </li>
         {% endfor %}
-    </ul>
+    </ul> {% endcomment %}
 
     <section>
         <h1> graph </h1>
