Past the product category to the product trends to display title name

--- a/top_amz_products/top_products/templates/top_products/home.html
+++ b/top_amz_products/top_products/templates/top_products/home.html
@@ -10,7 +10,7 @@
 {% block page_content %}
 
         <h2>Discover Trends with Amazon's Best Sellers List</h2>
-        <form id ="category_form" method="POST" action= "{% url 'products_stats' %}" >
+        <form id ="category_form" method="POST" action= "{% url 'products_trends' %}" >
             {% csrf_token %}
     <div id='categories'>
         <ul class="category-list">
@@ -24,7 +24,7 @@
                 You want to look it up by their id so send the hidden form data to backend to trigger the scrape_category to do the scraping.
                 {% endcomment %}
                 <li>
-                    <a href="#" onclick="selected_category_submit('{{ category.link }}')">
+                    <a href="#" onclick="selected_category_submit('{{ category.link }}', '{{ category.name }}')">
                         <img src="{% static "top_products/images/"|add:category.slug|add:".png" %}">
                         <span class='categories_name'>{{ category.name }}</span>
                     </a>
@@ -35,9 +35,12 @@
 
 
                 {% comment %} send category.id back to the backend so it can be processed.  {% endcomment %}
+      
             {% endfor %}
         </ul>
-        <input type="hidden" name="selected_category_url" id='selected_category_url'> 
+        <input type="hidden" name="selected_category_url" id='selected_category_url'>
+        <input type="hidden" name="selected_category_name" id='selected_category_name' value="{{ category.name }}">
+
     </div>
 
 
@@ -50,9 +53,11 @@
     </section> {% endcomment %}
 
     <script>
-        function selected_category_submit(categoryURL) {
+        function selected_category_submit(categoryURL, categoryName) {
             console.log(categoryURL);
+            console.log(categoryName);
             document.getElementById('selected_category_url').value = categoryURL;
+            document.getElementById('selected_category_name').value = categoryName;
             document.getElementById('category_form').submit();
         }
 
