--- a/top_amz_products/top_products/templates/top_products/products_trends.html
+++ b/top_amz_products/top_products/templates/top_products/products_trends.html
@@ -4,7 +4,7 @@
 
 
     <section>
-        <h1> graph </h1>
+        <h1> Top 3 Products from {{ category_name }}</h1>
         {% for graph in graphs %}
         <ul>
         <li><img src="data:image/png;base64,{{ graph }}" alt="My Plot"> </li>
